# test.django.notes.2

./: .gitignore  README.md  pyproject.toml  uwsgi.ini
.docs/: notes.md
src/apps/nts_account/: apps.py  models.py
src/apps/nts_account/migrations/: 0001_initial.py
src/apps/nts_blogs/: admin.py  apps.py  models.py  views.py
src/apps/nts_blogs/migrations/: 0001_initial.py
src/apps/nts_blogs/templates/: blogs_list_view.html
src/core/: asgi.py  settings.py  urls.py  wsgi.py
