[tool.poetry]
name = "test.django.notes"
version = "0.1.0"
description = ""
authors = ["Fernando Perez Gomez <fernando.perez@wisphub.net>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
